force-app/main/default/objects/Review_Assignment__c/Review_Assignment__c.object-meta.xml
<CustomObject>
    <label>Review Assignment</label>
    <nameField>
        <label>Review Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>