force-app/main/default/objects/Review_Assignment__c/fields/Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Evaluator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Review Assignments</relationshipLabel>
    <relationshipName>Review_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>