force-app/main/default/objects/Review_Assignment__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review</label>
    <referenceTo>Review__c</referenceTo>
    <relationshipLabel>Review Assignments</relationshipLabel>
    <relationshipName>Review_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>