force-app/main/default/objects/Review_Assignment__c/fields/Submitted_By_Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Evaluator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted By Evaluator</label>
    <type>Checkbox</type>
</CustomField>